<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="5dp">

    <!-- 칵테일 목록에 띄울 아이템 설정(코너 등) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_cocktail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toTopOf="@+id/button_panel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!-- 아이템 이미지 -->
            <ImageView
                android:id="@+id/picture_cocktail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:contentDescription="@string/picture_cocktail"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:elevation="0dp"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <!-- 별점, 좋아요 행 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/item_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_cocktail">

            <!-- 별점 (버튼이지만 클릭 x) -->

            <!-- 좋아요 버튼 -->
            <android.widget.Button
                android:id="@+id/button_rating"
                android:layout_width="58dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_rating_background"
                android:contentDescription="@string/rating"
                android:drawableStart="@drawable/icon_star_white"
                android:elevation="0dp"
                android:fontFamily="@font/suite_regular"
                android:paddingHorizontal="7dp"
                android:text="@string/zero"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_like"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <ToggleButton
                android:id="@+id/button_like"
                android:layout_width="58dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/button_like_background_selector"
                android:drawableStart="@drawable/button_like_icon_selector"
                android:elevation="0dp"
                android:fontFamily="@font/suite_regular"
                android:paddingStart="7dp"
                android:paddingEnd="10dp"
                android:textAlignment="viewEnd"
                android:textColor="@drawable/button_like_text_selector"
                android:textOff="@null"
                android:textOn="@null"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_rating"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 메뉴(아이템)명 -->
        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/suite_bold"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_panel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>